# materials

./: .gitignore  README.md  alembic.ini  materials.db  pyproject.toml  requirements.txt  setup.cfg  setup.py
alembic/: env.py  materials.db
alembic/versions/: dec204b8f6d2_add_standard_id_to_chemical_composition.py
materials/: __init__.py  __main__.py  crud.py  database.py  example.py  find.py  fun.py  logger_settings.py  main.py  materials.db
materials/data/: characteristics_of_material.csv  chemical_composition.csv  crud.py  hardness.csv  materials.csv  materials.db  materials2.db  mechanical_properties.csv  technological_properties.csv  temp.py
materials/models/: __init__.py  base.py  characteristics.py  chemical_composition.py  hardness.py  material.py  material_indices.py  mechanical_properties.py  standard.py  technological_properties.py
materials/scr/: gen_fun.py
materials/temp_1/: 1.py  2.py  3.py  combined_materials_final.xlsx  combined_materials_part_1.xlsx  combined_materials_part_10.xlsx  combined_materials_part_100.xlsx  combined_materials_part_101.xlsx  combined_materials_part_102.xlsx  combined_materials_part_103.xlsx  combined_materials_part_104.xlsx  combined_materials_part_105.xlsx  combined_materials_part_106.xlsx  combined_materials_part_107.xlsx  combined_materials_part_108.xlsx  combined_materials_part_109.xlsx  combined_materials_part_11.xlsx  combined_materials_part_110.xlsx  combined_materials_part_111.xlsx  combined_materials_part_112.xlsx  combined_materials_part_113.xlsx  combined_materials_part_114.xlsx  combined_materials_part_115.xlsx  combined_materials_part_116.xlsx  combined_materials_part_117.xlsx  combined_materials_part_118.xlsx  combined_materials_part_119.xlsx  combined_materials_part_12.xlsx  combined_materials_part_120.xlsx  combined_materials_part_121.xlsx  combined_materials_part_122.xlsx  combined_materials_part_123.xlsx  combined_materials_part_124.xlsx  combined_materials_part_125.xlsx  combined_materials_part_126.xlsx  combined_materials_part_13.xlsx  (+106 more)
materials_1/: __init__.py
(+1 files in other folders)
