[tool.poetry]
name = "materials"
version = "0.2.8"
description = ""
authors = ["Andrey Nikolaevich Korenyuk <korenyuk.a.n@mail.ru>"]
license = "LICENSE.txt"
readme = "README.md"
packages = [{include = "materials"}]

# Обязательно добавьте этот блок
include = [
    "materials/materials.db"
]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
