[tool.poetry]
name = "materials"
version = "0.2.09"
description = ""
authors = ["Andrey Nikolaevich Korenyuk <korenyuk.a.n@mail.ru>"]
license = "LICENSE.txt"
readme = "README.md"
packages = [{include = "materials"}]

include = [
    "materials/materials.db"
]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
