[metadata]
name = materials
version = 0.1.1
author = A.N.Korenyuk
author_email = korenyuk.a.n@mail.ru
description = Working with the database by machine tools
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    License :: LICENSE.txt :: LICENSE.txt
    Operating System :: OS Independent

[options]
package_dir =
    = materials
packages = find:
python_requires = >=3.6

[options.packages.find]
where = materials